--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "express-js-routing-parejaendeclive",
   "version": "1.0.0",
   "description": "[![Review Assignment Due Date](https://classroom.github.com/assets/deadline-readme-button-22041afd0340ce965d47ae6ef1cefeee28c7c493a6346c4f15d667ab976d596c.svg)](https://classroom.github.com/a/2snmTAKG)\r # Taller en Parejas: Creación de una API REST con Express.js",
-  "main": "endpoints_users.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node endpoints_users.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
